--- a/template/src/exercise/01.md
+++ b/template/src/exercise/01.md
@@ -2,7 +2,64 @@
 
 ## Overview
 
-text
+Here's some _emphasized text_. And some **bold text**. As well as some
+`inline code`. What about a [link](#)?
+
+- an
+- unordered
+- list
+
+> This is what a `blockquote` looks like
+
+Here's an example of a regular code block:
+
+```jsx
+function App() {
+  const [count, setCount] = useState(0);
+
+  function increment() {
+    setCount(count => count + 1);
+  }
+
+  function decrement() {
+    setCount(count => count - 1);
+  }
+
+  return (
+    <div>
+      <h1>Count: {count}</h1>
+      <button onClick={increment}>+</button>
+      <button onClick={decrement}>-</button>
+    </div>
+  );
+}
+```
+
+Here's an example of a live code block (try editing this in the browser):
+
+```jsx live=true render=true
+function App() {
+  const [count, setCount] = useState(0);
+
+  function increment() {
+    setCount(count => count + 1);
+  }
+
+  function decrement() {
+    setCount(count => count - 1);
+  }
+
+  return (
+    <div>
+      <h1>Count: {count}</h1>
+      <button onClick={increment}>+</button>
+      <button onClick={decrement}>-</button>
+    </div>
+  );
+}
+
+render(<App />);
+```
 
 ## Exercise
 
